feat: add update workout endpoint