@@ -2,6 +2,7 @@ package com.fittrack.backend.service;
 
 import com.fittrack.backend.dto.ExerciseRequest;
 import com.fittrack.backend.dto.WorkoutRequest;
+import com.fittrack.backend.dto.WorkoutResponse;
 import com.fittrack.backend.entity.Exercise;
 import com.fittrack.backend.entity.Workout;
 import com.fittrack.backend.repository.UserRepository;
@@ -10,6 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class WorkoutService {
@@ -41,7 +43,7 @@ public class WorkoutService {
                         exercise.setWeight(e.getWeight());
                         exercise.setWorkout(workout);
                         return exercise;
-                    }).toList();
+                    }).collect(Collectors.toList());
             workout.setExercises(exercises);
         }
 
@@ -66,5 +68,38 @@ public class WorkoutService {
         }
 
         workoutRepository.deleteById(id);
+    }
+
+    public WorkoutResponse updateWorkout(Long id, WorkoutRequest request, String username) {
+        var user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+
+        Workout workout = workoutRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Workout not found"));
+
+        if (!workout.getUser().getId().equals(user.getId())) {
+            throw new RuntimeException("Not authorized to update this workout");
+        }
+
+
+        workout.setName(request.getName());
+        workout.setDescription(request.getDescription());
+
+        if (request.getExercises() != null) {
+            List<Exercise> exercises = request.getExercises().stream()
+                    .map(e -> {
+                        Exercise exercise = new Exercise();
+                        exercise.setName(e.getName());
+                        exercise.setSets(e.getSets());
+                        exercise.setReps(e.getReps());
+                        exercise.setWeight(e.getWeight());
+                        exercise.setWorkout(workout);
+                        return exercise;
+                    }).collect(Collectors.toList());
+            workout.getExercises().clear();
+            workout.getExercises().addAll(exercises);
+        }
+
+        return WorkoutResponse.from(workoutRepository.save(workout));
     }
 }
